crates/kirin-derive-core-2/src/kirin/field/snapshots/kirin_derive_core_2__kirin__field__context__tests__simple.snap
---
source: crates/kirin-derive-core-2/src/kirin/field/context.rs
expression: "format!(\"{:#?}\", data)"
---
Statement {
    attrs: KirinStatementOptions {
        format: None,
        builder: None,
        constant: false,
        pure: false,
        terminator: false,
        crate_path: Ignored,
        type_lattice: Ignored,
    },
    wraps: false,
    fields: FieldMembers {
        fields: [
            Field {
                wraps: false,
                ident: Some(
                    Ident(
                        a,
                    ),
                ),
                ty: Type::Path {
                    qself: None,
                    path: Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    i32,
                                ),
                                arguments: PathArguments::None,
                            },
                        ],
                    },
                },
                attrs: KirinFieldOptions {
                    into: false,
                    default: None,
                    ssa_ty: None,
                },
                extra: Other,
            },
            Field {
                wraps: false,
                ident: Some(
                    Ident(
                        b,
                    ),
                ),
                ty: Type::Path {
                    qself: None,
                    path: Path {
                        leading_colon: None,
                        segments: [
                            PathSegment {
                                ident: Ident(
                                    i32,
                                ),
                                arguments: PathArguments::None,
                            },
                        ],
                    },
                },
                attrs: KirinFieldOptions {
                    into: false,
                    default: None,
                    ssa_ty: None,
                },
                extra: Other,
            },
        ],
    },
    extra: (),
}
